# fire-watch

./: .gitignore  Procfile  README.md  Untitled Diagram.drawio  deploy.sh  dev-dependencies.txt  ecosystem.config.js  lint.sh  pyproject.toml  requirements.txt  run_server.sh  run_server_tests.sh  run_tests.sh  run_unittests.sh  sider.yml
.circleci/: config.yaml  config.yml
.github/: dependabot.yml
.github/workflows/: codeql-analysis.yml  lint.yml  servertests.yml  unittests.yml
client/: package-lock.json
client/public/: index.html
client/src/: index.js
server/: manage.py  test_runner.py
server/admin/: __init__.py
server/alerts/: __init__.py  checks.py  urls.py  views.py
server/apis/: __init__.py  checks.py  definitions.py  models.py  transactions.py  urls.py  user_model.py  utils.py  views.py
server/authentication/: __init__.py  definitions.py  issue_jwt.py  middleware.py  models.py  permissions.py  socket_middleware.py  utils.py  views.py
server/core/: __init__.py  asgi.py  errorfactory.py  settings.py  throttle.py  urls.py  utils.py  views.py  wsgi.py
server/fire_watch/: __init__.py  asgi.py  config_utils.py  errorfactory.py  settings.py  startup.py  throttle.py  urls.py  utils.py  views.py  wsgi.py
server/free_watch/: __init__.py  asgi.py  config_utils.py  models.py  settings.py  urls.py  utils.py  wsgi.py
server/models/: __init__.py  admin_model.py  api_model.py  auth_model.py  base_model.py  user_model.py
server/patches/: __init__.py  patch_admin_user.py  patches.py
server/tests/: base.py  test_admin.py  (+7 more)
siic-frontend/: package.json
(+33 files in other folders)
