[tool.poetry]
name = "siic-rain-water"
version = "0.1.0"
description = "Rain water management and analysis system"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.7"
djangorestframework = "^3.12.4"
python-dotenv = "^0.19.0"
pymongo = "^3.12.0"
gunicorn = "^20.1.0"
psutil = "^5.8.0"
requests = "^2.26.0"
black = "^21.8b0"
schema = "^0.7.4"
dnspython = "^2.1.0"
sentry-sdk = "^1.4.3"
PyJWT = "^2.1.0"
channels = "^3.0.4"
cryptography = "^3.4.8"
channels-redis = "^3.3.0"
uvicorn = "^0.15.0"
websockets = "^10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
